# bizclaw

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  GEMINI.md  GETTING_STARTED.md  README.md  docker-compose.prod.yml  install.sh
.agent/: ARCHITECTURE.md
.agent/agents/: architect.md  backend-specialist.md  build-error-resolver.md  devops-engineer.md  doc-updater.md  e2e-runner.md  frontend-specialist.md  performance-optimizer.md  refactor-cleaner.md  security-reviewer.md  seo-specialist.md
.agent/hooks/: hooks.json
.agent/rules/: coding-style.md  git-workflow.md  patterns.md  performance.md  security.md  testing.md
.agent/skills/clean-code/: SKILL.md
.agent/skills/coding-standards/: SKILL.md
.agent/skills/seo-fundamentals/: SKILL.md
.agents/workflows/: git.md
.github/workflows/: ci.yml
android/: README.md  gradle.properties
android/app/: build.gradle.kts
crates/bizclaw-agent/: Cargo.toml
crates/bizclaw-agent/src/: context.rs  (+4 more)
crates/bizclaw-channels/: Cargo.toml
crates/bizclaw-gateway/: Cargo.toml
crates/bizclaw-hands/: Cargo.toml
crates/bizclaw-knowledge/: Cargo.toml
crates/bizclaw-mcp/: Cargo.toml
crates/bizclaw-memory/: Cargo.toml
crates/bizclaw-providers/: Cargo.toml
crates/bizclaw-security/: Cargo.toml
crates/bizclaw-tools/: Cargo.toml
crates/bizclaw-tools/src/: document_reader.rs  file.rs  lib.rs  registry.rs  shell.rs
deploy/viagent-landing/: index.html
docs/architecture/: system_overview.md
landing/: index.html
migrations/: 001_init.sql
plans/bizclaw-platform/: plan.md
src/: main.rs  platform_main.rs
(+117 files in other folders)
